@startuml
skinparam classAttributeIconSize 0
hide circle
title DeleteTreatmentCommand Class Diagram

class DeleteTreatmentCommand {
    - {static} LOGGER : Logger
    + DeleteTreatmentCommand(pets : PetList)
    + exec(args : String) : void
}

interface "<<interface>>\nCommand" as Command {
    + exec(args : String) : void
}

class PetList {
    + getPetByName(name : String) : Pet
    + size() : int
    + get(index : int) : Pet
}

class Pet {
    - name : String
    - treatments : ArrayList<Treatment>
    + getName() : String
    + getTreatments() : ArrayList<Treatment>
    + removeTreatment(index : int) : Treatment
}

class Treatment {
    - type : String
    - date : LocalDate
    - note : String
    - isCompleted : boolean
    + getType() : String
    + getDate() : LocalDate
    + toString() : String
}

class Ui {
    + {static} printInvalidInputMessage(syntax : String) : void
}

Command <|.. DeleteTreatmentCommand
DeleteTreatmentCommand -down-> PetList : uses
DeleteTreatmentCommand ..> Ui : uses
PetList "1" *-- "*" Pet : contains
Pet "1" *-left- "*" Treatment : has

@enduml
